# OurPaint

./: .gitmodules  BMPpainter.cpp  BMPpainter.h  CMakeLists.txt  README.md  main.cpp  objects.cpp  objects.h  paint.cpp  paint.h
ClientServer/: Client.cpp  Client.h  Server.cpp  Server.h
GUI/: CastomeWindowError.h  CastomeWindowSuccessful.h  CastomeWindowWarning.h  FrameOverlay.cpp  FrameOverlay.h  OP.pro  SaveDialog.cpp  SaveDialog.h  Scaling.cpp  Scaling.h  WindowServer.h  help.cpp  help.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
GUI/Windows/: CastomeWindowError.h  CastomeWindowSuccessful.h  CastomeWindowWarning.h  WindowServer.h  help.h  help.ui  ui_Help.h
Matrix/: Matrix.h
graph/: simpleGraph.h
painter/: BMPpainter.cpp  BMPpainter.h  Painter.h  QTPainter.cpp  QTPainter.h  Scaling.cpp  enums.h  objects.cpp  objects.h  paint.cpp  paint.h  requirements.cpp  requirements.h
painter/Optimization/: Function.h  GradientOptimizer.cpp  GradientOptimizer.h  Optimazer.h  Task.h
painter/saveload/: FileOurP.cpp  FileOurP.h  objectInFile.cpp  objectInFile.h  requirementInFile.cpp  requirementInFile.h  rules.md
test/: CMakeLists.txt  for_test.cpp  for_test.h  graphgtests.cpp  matrixgtests.cpp  savergtests.cpp  test.cpp
