cmake_minimum_required(VERSION 3.20)
SET(CMAKE_MAKE_PROGRAM "D:/program/Msys2/usr/bin/make.exe")
SET(CMAKE_C_COMPILER_WORKS 1)
SET(CMAKE_CXX_COMPILER_WORKS 1)
SET(CMAKE_C_COMPILER D:/program/Msys2/mingw64/bin/gcc.exe)
SET(CMAKE_CXX_COMPILER D:/program/gcc/bin/g++.exe)
project(ourpaint)
add_executable(ourpaint main.cpp paint.cpp BMPpainter.cpp objects.cpp)
include_directories(additions)
include_directories(BMPfile/code)
add_subdirectory(BMPfile)
target_link_libraries(ourpaint bitmap)
